C++ assignment/OOP 244/ws5/DIY/Workshop 5/errors.txt
Portfolio.cpp: In constructor ‘sdds::Portfolio::Portfolio(double, const char*, char)’:
Portfolio.cpp:36:34: error: ‘strcpy’ was not declared in this scope
             strcpy(m_stock, stock);
                                  ^
